--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,16 @@ dependencies {
 
 }
 
+configurations.all {
+	resolutionStrategy {
+		dependencySubstitution {
+			substitute module('org.elasticsearch.client:elasticsearch-rest-high-level-client') with module('org.elasticsearch.client:elasticsearch-rest-high-level-client:7.8.0')
+			substitute module('org.elasticsearch.client:elasticsearch-rest-client') with module('org.elasticsearch.client:elasticsearch-rest-client:7.8.0')
+			substitute module('org.elasticsearch:elasticsearch') with module('org.elasticsearch:elasticsearch:7.8.0')
+		}
+	}
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
